# snmptrapreceiver

./: .gitignore  LICENSE  README.md  snmptrapreceiver.cabal
src/: Config.hs  Main.hs  Receiver.hs  TrapTypes.hs
