name:                snmptrapreceiver
version:             0.1.0.0
synopsis:            SNMP trap receiver
-- description:         
license:             MIT
license-file:        LICENSE
author:              IMOKURI
maintainer:          nenegi.01mo@gmail.com
copyright:           2015, IMOKURI
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git@github.com:IMOKURI/snmptrapreceiver.git

executable snmptrapreceiver
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7
                     , bytestring
                     , conduit
                     , conduit-extra
                     , network
                     , optparse-applicative
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
